# yuno-skeleton

./: CMakeLists.txt  README.rst  make_skeleton.c  make_skeleton.h  tmpl_dir.c  tmpl_dir.h  yuno_skeleton.c
skeletons/: __skeletons__.json
skeletons/c_h_file/: +rootname+.c_tmpl  +rootname+.h_tmpl
skeletons/c_project/: +utility+.c_tmpl  CMakeLists.txt_tmpl  README.rst_tmpl
skeletons/gclass_child/: c_+rootname+.c_tmpl
skeletons/gclass_service/: c_+rootname+.c_tmpl
skeletons/gclass_service_rc/: c_+rootname+.c_tmpl  c_+rootname+.h_tmpl
skeletons/gclass_timer/: c_+rootname+.c_tmpl
skeletons/gclass_tube/: c_+rootname+.c_tmpl
skeletons/js_gclass/: +rootname+.js_tmpl
skeletons/js_object/: +rootname+.js_tmpl
skeletons/js_yuno/: +rootname+.js_tmpl  +rootname+.scss_tmpl  __yuno__.js_tmpl
skeletons/skeletons.d/: README.txt
skeletons/yuno_citizen/: CMakeLists.txt_tmpl
skeletons/yuno_citizen/src/: c_+rootname+.c_tmpl  c_+rootname+.h_tmpl  main.c_tmpl
skeletons/yuno_citizen_with_ssl/: CMakeLists.txt_tmpl  README.rst_tmpl
skeletons/yuno_citizen_with_ssl/src/: c_+rootname+.c_tmpl  main.c_tmpl  yuno_+yunorole+.c_tmpl
skeletons/yuno_standalone/: CMakeLists.txt_tmpl  README.rst_tmpl
skeletons/yuno_standalone/src/: c_+rootname+.c_tmpl  main.c_tmpl  yuno_+yunorole+.c_tmpl  yuno_+yunorole+.h_tmpl
